--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "ng-full",
+  "name": "ng-todo",
   "version": "0.0.0",
   "main": "server/index.js",
   "dependencies": {
-    
+
     "angular": "~1.6.0",
     "bootstrap": "~3.3.7",
     "bootstrap-social": "^5.0.0",
@@ -16,7 +16,7 @@
     "angular-socket-io": "~0.7.0",
     "angular-ui-router": "~0.3.1",
     "angular-validation-match": "^1.9.0",
-    
+
     "core-js": "^2.2.1",
     "express": "^4.13.3",
     "morgan": "^1.8.0",
@@ -48,9 +48,9 @@
     "sprint-js": "~0.1.0"
   },
   "devDependencies": {
-    
+
     "angular-mocks": "~1.6.0",
-    
+
     "autoprefixer": "^6.0.0",
     "babel-core": "^6.6.5",
     "babel-eslint": "^6.0.4",
@@ -88,7 +88,7 @@
     "nodemon": "^1.3.7",
     "run-sequence": "^1.1.0",
     "lazypipe": "^1.0.1",
-    
+
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-stream": "^3.2.0",
@@ -114,7 +114,7 @@
     "less-loader": "^2.2.3",
 
     "karma-webpack": "^1.7.0",
-    
+
     "through2": "^2.0.1",
     "open": "~0.0.4",
     "istanbul": "1.1.0-alpha.1",
